--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
-node_modules
-trabalho-pratico-02/estados
+# dependencies
+node_modules/
+/.pnp
+.pnp.js
+/trabalho-pratico-02/estados
 *.json
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
